--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -525,7 +525,10 @@
     .centers_top {
         display: flex;
         align-items: center;
+        justify-content: flex-end;
         box-sizing: border-box;
+        width: 100%;
+
     }
 
     .Centers_pop h2 {
@@ -534,6 +537,7 @@
         font-size: 21px;
         letter-spacing: 0.01rem;
         margin-left: 15px;
+        margin-right: 28%;
     }
 
     .centers_close {
@@ -541,7 +545,8 @@
         height: 20px;
         cursor: pointer;
         position: relative;
-        left: 92%;
+        margin-right: 2%;
+
     }
 
     .centers {
@@ -711,6 +716,9 @@
     }
 
     @media screen and (max-width: 1300px) {
+        .Centers_pop h2 {
+            margin-right: 23%;
+        }
 
         .main-right {
             background-color: var(--background-color-right);
@@ -843,6 +851,10 @@
             margin-left: 5%;
         }
 
+        .Centers_pop h2 {
+            margin-right: 17%;
+        }
+
         .notification_popup {
             top: 11%;
             right: 27%;
@@ -854,7 +866,6 @@
             font-weight: bolder;
         }
     }
-
 
     @media screen and (max-width: 844px) {
         .main-right-top-notification {
@@ -905,11 +916,15 @@
     }
 
     @media screen and (max-width: 724px) {
+        .Centers_pop h2 {
+            margin-right: 10%;
+            font-size: 15px;
+        }
+
         .notification {
             height: 41px !important;
             margin-top: 6px;
             font-size: 13px;
-
         }
 
         .notification_popup h1 {
