--- a/public/css/Component/Home.css
+++ b/public/css/Component/Home.css
@@ -51,7 +51,7 @@
         align-items: center;
         padding-top: 20px;
         font-family: Inter ;
-        z-index: 10001;
+        /* z-index: 10001; */
     }
     
     .logo img {
@@ -605,6 +605,7 @@
 
     .contact-section .input-field{
         /* min-width: 300px; */
+        width: 520px;
         max-width: 520px;
         padding: 16px 24px;
         background-color: #f3f3f3;
@@ -639,6 +640,8 @@
         flex: 0 0 auto;
         background-color: #1ca557;
         border-radius: 8px;
+        margin-top: 15px;
+        cursor: pointer;
     }
 
     .contact-section .contact{
@@ -651,6 +654,12 @@
         font-size: 20px;
         text-align: center;
         letter-spacing: 0;
+        cursor: pointer;
+    }
+
+    .err{
+        color: red;
+        font-size: 14px;
     }
 
     footer{
@@ -664,6 +673,70 @@
 
     .hidden{
         display: none;
+    }
+
+    /* success popup */
+    .success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 100000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .popup {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: var(--green-color-one);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup button:hover{
+        background: var(--button-hover-green);
     }
 
 
