mail subscrptions admin side

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,6 +169,7 @@
 @import url('Component/Admin/Admin_Garbage_Types_View.css');
 
 @import url('Component/Admin/Admin_EditProfile.css');
+@import url('Component/Admin/Admin_Mail_Subscriptions.css');
 
 
 
