--- a/public/css/Component/Admin/Admin_Main.css
+++ b/public/css/Component/Admin/Admin_Main.css
@@ -14,6 +14,7 @@
         grid-template-columns: 17% 83%;
         font-family: 'Inter', sans-serif;
         color: var(--main-text-color);
+        min-height: 600px;
         background-color: var(--background-color-main);
     }
 
@@ -55,7 +56,7 @@
         display: flex;
         flex-direction: column;
         padding-left: 16%;
-        padding-top: 12%;
+        padding-top: 20%;
     }
 
     .main-left-middle h1 {
@@ -68,7 +69,7 @@
         width: 100%;
         font-size: 16px;
         align-items: center;
-        margin-bottom: 8%;
+        margin-bottom: 5%;
         cursor: pointer;
     }
 
@@ -160,83 +161,6 @@
         transform: translateX(13px);
     }
 
-    .main-right-top-notification {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-left: 30%;
-    }
-
-    .dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: #F13E3E;
-        margin-top: -14px;
-        margin-left: -12px;
-    }
-
-    .main-right-top-notification i {
-        font-size: 29px;
-        cursor: pointer;
-    }
-
-    .notification_popup {
-        height: 0;
-        position: absolute;
-        top: 9%;
-        right: 11%;
-        background-color: var(--background-color-main);
-        border-radius: 10px;
-        padding: 0;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        transition: height 0.6s ease-in;
-        width: 18%;
-        visibility: hidden;
-        opacity: 0;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: scroll;
-        border: 1px solid #dcdde1;
-    }
-
-    .notification_popup h1 {
-        font-size: 19px;
-        letter-spacing: 0.001rem;
-        margin-bottom: 13px;
-        margin-top: 5px;
-        margin-left: 8px;
-    }
-
-    .notification_popup.active {
-        height: 200px;
-        padding: 10px;
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .notification {
-        height: 43px !important;
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-        padding-left: 10px;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .notification:hover {
-        background-color: var(--notification-hover);
-    }
-
-    .notification-green-dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: var(--green-color-one);
-        margin-right: 10px;
-    }
 
     .main-right-top-profile {
         display: flex;
@@ -265,7 +189,33 @@
         font-size: 14px;
     }
 
-    @media screen and (max-width: 1266px) {
+    .main-right-top-profile img {
+        width: 50px;
+        height: 50px;
+        margin-right: 15px;
+        border-radius: 10px;
+    }
+
+    .main-right-top-profile-cont {
+        margin-top: 7px;
+    }
+
+    .main-right-top-profile-cont h3 {
+        font-size: 18px;
+        letter-spacing: 0.03rem;
+    }
+
+    .main-right-top-profile-cont p {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: 1366px) {
+        .main-left-middle-content h3 {
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (max-width: 1252px) {
         .main-left-top h3 {
             display: none;
         }
@@ -275,23 +225,20 @@
             width: 75px;
             height: 75px;
         }
-    }
 
-    @media screen and (max-width: 1266px) {
-        .main-left-middle-content h3 {
-            font-size: 16px;
-        }
-
-
-    }
-
-    @media screen and (max-width: 1266px) {
         .main-left-middle-content h3 {
             font-size: 14px;
         }
     }
 
-    @media screen and (max-width: 784px) {
+
+    @media screen and (max-width:1200px) {
+        .main-left-middle-content h3 {
+            font-size: 12px;
+        }
+    }
+
+    @media screen and (max-width: 1000px) {
         .main-left-middle-content h3 {
             display: none;
         }
@@ -330,180 +277,38 @@
             margin-top: 100%;
         }
     }
-}
 
+    @media screen and (max-width:588px) {
+        .main-left-middle h1 {
+            font-size: 12px;
+        }
 
-
-/* .Admin_Main {
-    a {
-        text-decoration: none;
-        color: inherit;
-        width: auto;
-        height: auto;
-        display: auto;
-
+        .main-left-down h1 {
+            font-size: 12px;
+        }
     }
 
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: 'Inter';
-    }
-
-    a {
-        text-decoration: none;
-        color: inherit;
-    }
-
-    .main {
-        width: 100%;
-        height: 731px;
-        display: grid;
-        grid-template-columns: 17% 83%;
-    }
-
-    .main-left {
-        background: #8CF889;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .main-left-top {
-        display: flex;
-        flex-direction: row;
-        margin-top: 20px;
-    }
-
-    .main-left-top img {
-        width: 120px;
-        height: 120px;
-        margin-left: 10px;
-    }
-
-    .main-left-top h1 {
-        font-size: 24px;
-        margin-top: 70px;
-    }
-
-    .main-left-middle {
-        color: #4A4747;
-        margin-top: 40px;
-    }
-
-    .main-left-middle-content {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 24px;
-        padding-left: 12px;
-        cursor: pointer;
-        height: 18%;
-    }
-
-    .main-left-middle-content img {
-        width: 39px;
-        height: 39px;
-        margin-left: 20px;
-        border-radius: 5px;
-    }
-
-    .main-left-middle-content h2 {
-        font-family: Inter;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 28px;
-        letter-spacing: 0em;
-        text-align: left;
-        margin-left: 30px;
-        width: 150px;
-    }
-
-    .current {
-        background: #1B6652;
-        background-color: rgba(27, 102, 82, 0.4);
-    }
-
-    .main-left-middle-content-line {
-        width: 8px;
-        height: 28px;
-        border-radius: 0px, 4px, 4px, 0px;
-        background: radial-gradient(82.23% 108.11% at 101.39% 101.07%, #13C93E 0%, #ADE446 100%)
-    }
-
-    .main-left-middle-content-line1 {
-        width: 8px;
-        height: 28px;
-        border-radius: 0px, 4px, 4px, 0px;
-        background: none;
-    }
-
-    .main-left-bottom {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-        margin-top: 200px;
-        color: #4A4747;
-    }
-
-    .main-left-bottom-content {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 25px;
-        padding-right: 30px;
-        cursor: pointer;
-    }
-
-    .main-left-bottom img {
-        width: 25px;
-        height: 25px;
-        margin-right: 20px;
-    }
-
-    .main-left-bottom p {
-        font-size: 17px;
-        font-family: Poppins;
-        color: #4A4747;
-    }
-
-
-
-
-
-
-    @media screen and (max-width: 1250px) {
-        .main-left-middle-content h2 {
+    @media screen and (max-width:488px) {
+        .main-left-middle h1 {
             display: none;
         }
 
-        .main-left-middle-content-line {
-            display: none;
-        }
-
-        .main-left-bottom-content p {
-            display: none;
-        }
-
-        .main-left-bottom-content {
-
-            padding-right: 0px;
-        }
-
-        .main-left-middle-content img {
-            margin-left: 0;
-        }
-
-        .main-left-top h1 {
+        .main-left-down h1 {
             display: none;
         }
 
         .main-left-top img {
-            width: 100%;
-            height: 100%;
+            width: 55px;
+            height: 55px;
+            margin-right: 0px
+        }
+
+        .main-left-middle-content i {
+            font-size: 24px;
+        }
+
+        .main-left-middle-content {
+            margin-bottom: 7%;
         }
     }
-} */
+}
